# hermes

./: .dockerignore  .editorconfig  .env.example  DOCKER.md  Dockerfile  LICENSE  LICENSE.md  README.md  TROUBLESHOOTING.md  install-hermes-service.sh  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml  release.yml
licenses/: LICENSE-CC-BY-SA-40  LICENSE-MIT
src/hermesbaby/hermes/: main.py
tests/: conftest.py  test_main.py
