[tool.poetry]
name = "hermesbaby-hermes"
version = "1976.06.04.1"
description = "Hermes: the hub of the HermesBaby stack"
authors = ["basejumpa <alexander.mannwahrenberg@gmail.com>"]
license = "MIT for contents used as software, CC BY-SA-4.0 for contents used as method or otherwise"
readme = "README.md"
packages = [{ include = "hermesbaby", from = "src" }]

[tool.poetry.scripts]
hermes = "hermesbaby.hermes.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.11.0"
py7zr = "^0.21.0"

[poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.25.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
